Estrutura da Tela Igreja

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
 
   <div id="container">
 
-    <video class="backgroundVideo" autoplay muted loop>
+    <video width="100%" heigth="100%" class="backgroundVideo" autoplay muted loop>
       <source src="../../assets/video/vid_001.mp4" type="video/mp4">
     </video>
 
