--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,6 @@
 *{
   color:white;
+  overflow: hidden;
 }
 
 .container{
@@ -19,8 +20,8 @@ a{
   position: absolute; 
   left: 0; 
 	top: 0;
-	min-width: 100%; 
-	min-height: 100%;
+	// min-width: 100%; 
+	// min-height: 100%;
 	width: auto;
   height: auto; 
   overflow: hidden;
