--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -153,7 +153,7 @@
    */
 
   .ios body {
-    --ion-background-color: #ffffff;
+    --ion-background-color: #f6f6f6;
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #000000;
@@ -192,7 +192,7 @@
    */
 
   .md body {
-    --ion-background-color: #ffffff;
+    --ion-background-color: #f6f6f6;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #000000;
