Video de Fundo corrigido

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -101,7 +101,9 @@
 
     </ion-grid>
 
-    <ion-icon id="a" name="arrow-down-circle"></ion-icon>
+    <div style="heigth: 400px; position: relative; background-color: red"></div>
+
+    <ion-icon class="endPage" name="arrow-down-circle"></ion-icon>
 
   </div>
 
