--- a/src/app/igreja/igreja.page.html
+++ b/src/app/igreja/igreja.page.html
@@ -3,7 +3,7 @@
     <ion-button (click)="go(0)" color="primary" class="backButton">
       <ion-icon name="arrow-back-outline"></ion-icon>
     </ion-button>
-    <ion-title class="titleToolbar">IGREJA</ion-title>
+    <ion-label class="titleToolbar">IGREJA</ion-label>
   </ion-toolbar>
 </ion-header>
 
