--- a/src/app/igreja/igreja.page.html
+++ b/src/app/igreja/igreja.page.html
@@ -32,45 +32,32 @@
 
   <div class="titleSections">Programação da Semana</div>
 
-  <ion-grid>
 
-    <ion-row>
-      <ion-col>
-        <ion-card class="programCard">
-          <ion-label class="programCardTitle">DOM</ion-label><br>
-          <ion-label class="programCardName">EBD</ion-label><br>
-          <ion-label class="programCardDate">09:00H</ion-label>
-        </ion-card>
-      </ion-col>
-      <ion-col>
-        <ion-card class="programCard">
-          <ion-label class="programCardTitle">DOM</ion-label><br>
-          <ion-label class="programCardName">EBD</ion-label><br>
-          <ion-label class="programCardDate">09:00H</ion-label>
-        </ion-card>
-      </ion-col>
-    </ion-row>
+  <ion-card class="contactSection">
 
-    <ion-row>
-      <ion-col>
-        <ion-card class="programCard">
-          <ion-label class="programCardTitle">DOM</ion-label><br>
-          <ion-label class="programCardName">EBD</ion-label><br>
-          <ion-label class="programCardDate">09:00H</ion-label>
-        </ion-card>
-      </ion-col>
-      <ion-col>
-        <ion-card class="programCard">
-          <ion-label class="programCardTitle">DOM</ion-label><br>
-          <ion-label class="programCardName">EBD</ion-label><br>
-          <ion-label class="programCardDate">09:00H</ion-label>
-        </ion-card>
-      </ion-col>
-    </ion-row>
+    <div class="contactSections">
+      <ion-icon class="contactSectionsIcon" name="calendar"></ion-icon>
+      <ion-label class="contactSectionsText">TER &nbsp;|| CULTO DE INSTRUÇÃO || 19H</ion-label>
+    </div>
 
-  </ion-grid>
+    <div class="contactSections">
+      <ion-icon class="contactSectionsIcon" name="calendar"></ion-icon>
+      <ion-label class="contactSectionsText">QUI &nbsp;&nbsp;|| CÍRCULO DE ORAÇÃO &nbsp;|| 19H</ion-label>
+    </div>
 
-  <div class="titleSections">HISTÓRIA</div>
+    <div class="contactSections">
+      <ion-icon class="contactSectionsIcon" name="calendar"></ion-icon>
+      <ion-label class="contactSectionsText">DOM || CULTO DE LOUVOR &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; || 09H</ion-label>
+    </div>
+
+    <div class="contactSections">
+      <ion-icon class="contactSectionsIcon" name="calendar"></ion-icon>
+      <ion-label class="contactSectionsText">DOM || CULTO DE LOUVOR &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; || 19H</ion-label>
+    </div>
+
+  </ion-card>
+
+  <div class="titleSections">História</div>
 
   <div class="container">
 
