--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -181,7 +181,7 @@
 
     --ion-toolbar-background: #0d0d0d;
 
-    --ion-item-background: #ffffff;
+    --ion-item-background: rgba(255,255,255,0.8);
     --ion-item-background-activated: #ffffff;
   }
 
@@ -220,7 +220,7 @@
     --ion-color-step-900: #e7e7e7;
     --ion-color-step-950: #f3f3f3;
 
-    --ion-item-background: #ffffff;
+    --ion-item-background: rgba(255,255,255,0.8);
   }
 
   ion-title.title-large {
