--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -16,6 +16,11 @@ a{
   text-decoration: none;
 }
 
+#container {
+  // --background: #CCCCCC url("../../assets/imgs/washington.jpg") no-repeat center !important;
+  background: #000000!important;
+  }
+
 .backgroundVideo {
   position: absolute; 
   left: 0; 
