--- a/src/app/igreja/igreja.page.html
+++ b/src/app/igreja/igreja.page.html
@@ -56,7 +56,7 @@
     </div>
 
   </ion-card>
-
+<!-- 
   <div class="titleSections">História</div>
 
   <div class="container">
@@ -182,6 +182,6 @@
       </li>
     </ul>
 
-  </div>
+  </div> -->
 
 </ion-content>
