--- a/src/app/events-details/events-details.page.html
+++ b/src/app/events-details/events-details.page.html
@@ -14,17 +14,25 @@
 
   <ion-grid>
     <ion-row style="max-height: 100px; border: 0.1px solid black; background-color: whitesmoke">
-      <ion-col col-1>
+      <ion-col size="5">
         <img style="max-height: 90px" src="{{selectedEventImg}}">
       </ion-col>
-      <ion-col col-11>
-        <b>{{selectedEventNome}}</b>
-        {{selectedEventData}}
+      <ion-col size="7">
 
-        <select (change)="setSelectedQuantityTickets($event.target.value)" class="selectVagas">
-          <option disabled>Qtd. Tickets</option>
-          <option *ngFor="let t of selectedEventVagas" value="{{t.number}}">{{t.desc}}</option>
-        </select>
+        <ion-row>
+          <b>{{selectedEventNome}}</b>
+          {{selectedEventData}}
+        </ion-row>
+
+        <ion-row class="addRemoveBtns">
+          <button (click)="minusTicketsQtd()" class="smallBtn">
+            <ion-icon name="remove-outline"></ion-icon>
+          </button>
+          <div class="selectedEventVagas">{{selectedQuantityTickets}} tickets</div>
+          <button (click)="addTicketsQtd()" class="smallBtn">
+            <ion-icon name="add-outline"></ion-icon>
+          </button>
+        </ion-row>
 
       </ion-col>
     </ion-row>
@@ -33,13 +41,12 @@
   <ion-card *ngIf="selectedQuantityTickets">
     <h5>Insira os dados da {{countPersona}}ª Pessoa</h5>
     <div>
-      <ion-input [(ngModel)]="selectedPersonaNome" type="text" placeholder="Insira o nome aqui" required></ion-input>
-      <ion-input [(ngModel)]="selectedPersonaFone" type="number" placeholder="Insira o telefone aqui" required>
-      </ion-input>
-      <ion-input [(ngModel)]="selectedPersonaCPF" type="number" placeholder="Insira o CPF aqui" required></ion-input>
+      <input class="inputStyle" [(ngModel)]="selectedPersonaNome" type="text" placeholder="Insira o nome aqui" required>
+      <input class="inputStyle" [(ngModel)]="selectedPersonaFone" type="number" placeholder="Insira o telefone aqui" required>
+      <input class="inputStyle" [(ngModel)]="selectedPersonaCPF" type="number" placeholder="Insira o CPF aqui" required>
     </div>
     <button (click)="cleanFormTickets()" class="cancelBtn">Limpar</button>
-    <button (click)="addPersonaData()" class="saveBtn">Salvar</button>
+    <button (click)="addPersonaData()" class="saveBtn">{{btnSavePersonaData}}</button>
   </ion-card>
 
 </ion-content>
