--- a/src/app/events-details/events-details.page.scss
+++ b/src/app/events-details/events-details.page.scss
@@ -7,13 +7,39 @@
   width: 90%;
 }
 
-.saveBtn{ 
+.addRemoveBtns{
+  margin-top: 5px;
+}
+
+.smallBtn{ 
+  background-color: #00669d; 
+  border-radius: 50%;
+  color: white; 
+  font-size: 17px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 30px;
+  height: 30px;
+}
+
+.saveBtn{
   background-color: #00669d; 
   color: white; 
+  margin-top: 3%;
+  margin-left: 3%;
+  margin-bottom: 3%;
   padding: 10px 40px;
-  margin-left: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+}
+
+.selectedEventVagas{
+  font-size: 20px;
+  margin-top: 5px;
+}
+
+.inputStyle{
+  width: 80%;
+  margin-top: 2px;
+  padding: 2%;
 }
 
 .cancelBtn{
