--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -11,11 +11,17 @@
 
   <ion-card (click)="subscribeEvent(culto)" *ngFor="let culto of listaCultos"
     [ngClass]="{'greyScale': culto.vagas === 0}">
-    <img src={{culto.type}}>
+    <div class="container">
+      <div class="tag">
+        <h3 class="dateSquareText2">{{culto.letterMonth}}</h3>
+        <h1 class="dateSquareText">{{culto.letterDate}}</h1>
+      </div>
+      <img src={{culto.type}}>
+    </div>
     <div class="text">
       <h3 class="closeTextUpper"><b>{{culto.nome}}</b></h3>
       <h4 class="closeText"><b>({{culto.church}})</b></h4>
-      <ion-card-subtitle class="closeText">{{culto.data}}</ion-card-subtitle>
+      <ion-card-subtitle class="closeText">Início às 19:00h</ion-card-subtitle>
       <meter min="0" low="35" high="40" max="40" value="{{culto.vagas}}"></meter><br>
     </div>
   </ion-card>
