Validação de Pessoas individuais

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,9 +6,9 @@
 
   <div id="container">
     
-    <video width="100%" heigth="100%" class="backgroundVideo" autoplay muted loop>
+    <!-- <video width="100%" heigth="100%" class="backgroundVideo" autoplay muted loop>
       <source src="../../assets/video/vid_001.mp4" type="video/mp4">
-    </video>
+    </video> -->
 
     <div (click)="developOptions()" class="churchLogoArea">
       <img src="../../assets/imgs/church.png" />
