Alterações na contagem e Cancelamento de Tickets

--- a/src/app/events-confirm/events-confirm.page.html
+++ b/src/app/events-confirm/events-confirm.page.html
@@ -24,6 +24,6 @@
     <b>{{qrData}}</b>
   </div>
 
-  <button type="button" class="block buttonTicket" routerLink="/events">VOLTAR</button>
+  <button type="button" class="block buttonTicket" (click)="backConfirm()">VOLTAR</button>
 
 </ion-content>
